--- a/scripts/IGM.Rmd
+++ b/scripts/IGM.Rmd
@@ -130,7 +130,7 @@ y %>%
   data.frame(length = y) %>%
   ggplot(aes(x = length)) + 
   geom_histogram(aes(y = after_stat(count / sum(count))), binwidth = 5) +
-  ggtitle("Simulated length-frequency") +
+  ggtitle("Mixture: Simulated length-frequency") +
   ylab("Percent of total unique lengths") +
   xlab("Length (mm)")
 ```
@@ -437,85 +437,144 @@ bayesplot::ppc_loo_pit_overlay(y = stan_dataList_mix_fit$y,
                     lw = wts_mix_1,
                     samples = 50)
 ```
+# Simulate CMR data based on VB
+This model conditions on observed length ("initial" length).
+```{r simulate_VB_cmr}
+set.seed(1234)
+
+N <- 1000 # number of individual fish
+J <- 30 # number of hypothetical sampling sites fish belong to
+
+site <- sample(1:J, size = N, replace = TRUE) # randomly assign fish to a site (or equivalent to a srs of N fish across J sites)
+y <- rep(NA, N) # container for fish lengths to be simulated
+
+
+Li <- (rlnorm(N, 4.5, 0.2)) # log-scale intercept term for initial length mm / L0
+days <- rep(365, N) # make recapture interval 365 days for all fish
+
+b0_Linf <- log(250) # log-scale intercept term for asymptotic average length in mm / Linf  
+b0_k <- log(0.4) # log-scale intercept term for Brody growth rate coefficient (growth in mm/time)
+
+# assemble a hypothetical Cholesky correlation matrix for correlated VB parameters among sites
+Omega <- matrix(NA, 2, 2) # container for correlations
+Omega[1, ] <- c(1, -0.5)
+Omega[2, ] <- c(-0.5, 1)
+
+# assemble a covariance matrix with site-to-site correlations among parameters and scale of variation
+sigma_VB <- c(0.2, 0.2) # scale of site-to-site variation in L0, Linf, and k, respectively
+Sigma_VB <- as.matrix(diag(sigma_VB) %*% Omega %*% diag(sigma_VB)) # quad_form_diag() in Stan
+
+# define random effects by site for each VB parameter
+eps <- matrix(NA, J, 2) # container for effects
+
+for(j in 1:J){
+  eps[j, ] <- MASS::mvrnorm(1, mu = rep(0, 2), Sigma = Sigma_VB)
+  }
+
+# assemble linear predictor for each VB parameter
+Linf <- rep(NA, J)
+k <- rep(NA, J)
+
+for(j in 1:J){
+  Linf[j] <- exp(b0_Linf + eps[j, 1])
+  k[j] <- exp(b0_k + eps[j, 2])
+}
+
+mu <- rep(NA, N) # container for location parameter/mean of length at age
+
+for(n in 1:N){
+  mu[n] <- Li[n] + (Linf[site[n]] - Li[n]) * (1 - exp(-k[site[n]] * (days[n] / 365)))
+  }
+
+
+log_mu <- log(mu) # log mu for location parameter of lognormal likelihood
+
+sigma <- 0.15 # scale of observation-level variation in lengths
+
+# lognormal likelihood
+for(n in 1:N){
+  y[n] <- rlnorm(1, log_mu[n], sigma)
+  }
+```
+
+Plot the simulated length-frequency
+```{r plot_simulated_lengths, fig.align='center', fig.asp=0.75, fig.width=5}
+y %>%
+  data.frame(length = y) %>%
+  ggplot(aes(x = length)) + 
+  geom_histogram(aes(y = after_stat(count / sum(count))), binwidth = 5) +
+  ggtitle("CMR: Simulated length-frequency") +
+  ylab("Percent of total unique lengths") +
+  xlab("Length (mm)")
+```
 
 # Stan model for CMR data
 Now lets consider the CMR data only.
 ```{stan model_2, echo=TRUE, message=FALSE, warning=FALSE, output.var="cmr"}
-data{
- int< lower = 1 > N_cmr; // number of observations (fish lengths - cmr data)
- int< lower= 1 > J; // number of sites
- int < lower=1 > site_cmr[ N_cmr ];
- vector[ N_cmr ] y_cmr;
- vector[ N_cmr ] L_i;
- vector< lower = 0 >[ N_cmr ] days;
- real < lower=1 > eta; // parameter for LKJ prior
- int< lower=0 , upper=1 > prior_only; // =1 to get data from prior predictive
+data {
+ int<lower = 1> N; // number of observations (fish lengths - cmr data)
+ int<lower= 1> J; // number of sites
+ int <lower=1> site[N];
+ vector[N] y;
+ vector[N] L_i;
+ vector<lower = 0>[N] days;
+ real <lower = 1> eta; // parameter for LKJ prior
+ int<lower = 0, upper = 1> prior_only; // = 1 to get data from prior predictive
  }
-parameters{
- real z_b0_Linf;
- real z_b0_k;
- matrix[ 2 , J ] r_z;
- vector < lower=0 > [ 2 ] z_sigma_VBG;
- cholesky_factor_corr[ 2 ] L_Omega_J;
- real < lower=0 > z_sigma_cmr;
- }
-transformed parameters{
+ 
+parameters {
  real b0_Linf;
  real b0_k;
- matrix[ J , 2 ] r;
- vector [ J ] Linf;
- vector [ J ] k;
- vector < lower=0 > [ 2 ] sigma_VBG;
- real < lower=0 > sigma_cmr;
- vector [ N_cmr ] mu_cmr;
- 
- b0_Linf = 5.35 + z_b0_Linf * 0.2; //translated: N( 250 , 30 ) #5.4, 0.25
- b0_k = -0.5 + z_b0_k * 1; //translated: N( 0 , 0.3 ) #-0.7, 0.5
- 
- sigma_VBG[ 1 ] = z_sigma_VBG[ 1 ] * 0.3; // translated: hN( 0 , 15 ) Linf
- sigma_VBG[ 2 ] = z_sigma_VBG[ 2 ] * 0.5; // translated: N( 0 , 0.2 ) k
- 
- sigma_cmr = z_sigma_cmr * 0.25; //translated: hN( 0 , 0.2 )
- 
- r = ( diag_pre_multiply( sigma_VBG , L_Omega_J ) * r_z )';
- 
- Linf = exp( b0_Linf + col( r , 1 ) );
- k = exp( b0_k + col( r , 2 ) );
-
- for ( c in 1:N_cmr ) {
-  mu_cmr[ c ] =  log(
-   L_i[ c ] + ( Linf[ site_cmr[ c ] ] - L_i[ c ] ) .* 
-    ( 1.0 - exp( -k[ site_cmr[ c ] ] .* ( days[ c ] / 365 ) ) ) );
-  }
+ matrix[2, J] r_z;
+ vector <lower = 0> [2] sigma_VB;
+ cholesky_factor_corr[2] L_Omega;
+ real <lower = 0> sigma;
  }
-model{
+
+transformed parameters {
+ matrix[J, 2] r;
+ vector [J] Linf;
+ vector [J] k;
+ vector [N] mu;
+ 
+ r = (diag_pre_multiply(sigma_VB, L_Omega) * r_z)';
+ 
+ Linf = exp(b0_Linf + col(r, 1));
+ k = exp(b0_k + col(r, 2));
+
+ for (n in 1:N) {
+   mu[n] =  log(L_i[n] + (Linf[site[n]] - L_i[n]) .* (1.0 - exp(-k[site[n]] .* (days[n] / 365))));
+   }
+ }
+ 
+model {
  //priors
- target += normal_lpdf( z_b0_Linf | 0 , 1 );
- target += normal_lpdf( z_b0_k | 0 , 1 );
+ target += normal_lpdf(b0_Linf | 5.5, 0.25);
+ target += normal_lpdf(b0_k | -1, 0.5);
  
- target += normal_lpdf( to_vector( r_z ) | 0 , 1 );
+ target += normal_lpdf(to_vector(r_z) | 0, 1);
  
- target += normal_lpdf( z_sigma_VBG | 0 , 1 ) - 1 * normal_lccdf( 0 | 0 , 1 );
+ target += normal_lpdf(sigma_VB | 0, 0.25);
+ target += normal_lpdf(sigma | 0, 0.5);
  
- target += normal_lpdf( z_sigma_cmr | 0 , 1 ) - 1 * normal_lccdf( 0 | 0 , 1 );
- 
- target += lkj_corr_cholesky_lpdf( L_Omega_J | eta );
+ target += lkj_corr_cholesky_lpdf(L_Omega | eta);
  
  //likelihood
- if ( prior_only == 0 ) {
-  target += lognormal_lpdf( y_cmr | mu_cmr, sigma_cmr );
+ if (prior_only == 0) {
+  target += lognormal_lpdf(y | mu, sigma);
   }
  }
+ 
 generated quantities {
-  vector[ N_cmr ] y_rep_cmr;
-  vector[ N_cmr ] log_lik;
-  matrix[ 2 , 2 ] Omega_J;
+  vector[N] y_rep;
+  vector[N] log_lik;
+  matrix[2, 2] Omega;
   
-  Omega_J = multiply_lower_tri_self_transpose( L_Omega_J );
+  Omega = multiply_lower_tri_self_transpose(L_Omega);
   
-  for ( c in 1:N_cmr ) {
-   log_lik[ c ] = lognormal_lpdf( y_cmr[ c ] | mu_cmr[ c ] , sigma_cmr );
-   y_rep_cmr[ c ] = lognormal_rng( mu_cmr[ c ] , sigma_cmr );
+  for (n in 1:N) {
+   log_lik[n] = lognormal_lpdf(y[n] | mu[n], sigma);
+   y_rep[n] = lognormal_rng(mu[n], sigma);
    }
  }
 ```
@@ -525,26 +584,26 @@ Lets now fit our model to the observational data, again looking at 5 age classes
 
 ### Data list for fit to data
 ```{r stan_data_list_fit_2}
-stan_dataList_cmr_fit <- list(N_cmr=nrow(df_cmr),
-                              J=max(coerce_index(df_cmr$site_year)),
-                              site_cmr=coerce_index(df_cmr$site_year),
-                              y_cmr=df_cmr$length_r,
-                              L_i=df_cmr$length_c,
-                              days = df_cmr$days,
-                              eta = 2, 
+stan_dataList_cmr_fit <- list(N  = N,
+                              J = J,
+                              site = site,
+                              y = y,
+                              L_i= Li,
+                              days = days,
+                              eta = 1, 
                               prior_only = 0
                               )
-
 ```
 
 ### Run the model with observational data
 ```{r fit_stan_model_2, echo=TRUE, cache=TRUE}
-cmr_fit_1 <- sampling(object=cmr,
-                        data=stan_dataList_cmr_fit,
-                        chains=5,
-                        iter=2000,
-                        cores=5,
-                        thin=1#,
+# takes about 98s
+cmr_fit_1 <- sampling(object = cmr,
+                        data = stan_dataList_cmr_fit,
+                        chains = 4,
+                        iter = 3000,
+                        cores = 4,
+                        thin = 1#,
                         #control = list(
                         #  adapt_delta=0.99, #default=0.8
                         #  max_treedepth =12 #default= 10
@@ -552,92 +611,153 @@ cmr_fit_1 <- sampling(object=cmr,
                         )
 ```
 
-### Pairs plot of the posteriors:
-```{r pairs_summary_fit_2, echo=FALSE, fig.align='center', fig.width=8, fig.height=8}
-pairs(cmr_fit_1, 
-      pars=c("b0_Linf",
-             "b0_k",
-             "sigma_VBG",
-             "sigma_cmr",
-             "lp__"),
-      log=TRUE
-      )
+### pairs plot of the posteriors
+```{r pairs_summary_fit_1, fig.align='center', fig.asp=1, fig.width=8}
+np <- nuts_params(cmr_fit_1)
+
+mcmc_pairs(cmr_fit_1,
+           pars = c("b0_Linf",
+                    "b0_k",
+                    "lp__"),
+           regex_pars = "sigma",
+           np = np,
+           off_diag_args = list(size = 0.75)
+           )
 ```
 
-### Summarize the parameters
-```{r print_summary_2, echo=TRUE}
+### Tabular parameter summary
+```{r print_summary_1, echo=TRUE}
 print(cmr_fit_1, 
       pars=c("b0_Linf",
              "b0_k",
-             "sigma_VBG",
-             "sigma_cmr",
-             "Omega_J",
+             "sigma_VB",
+             "sigma",
+             "Omega",
              "lp__")
       )
 ```
 
-### Compare prior model to observational data
-Compare prior predictive distribution (black) to observational data distribution (red): 
-```{r ppd_summary_2, echo=TRUE, fig.align='center', fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
+### Estimates vs. true values
+Did we recover the parameters of the simulation? True values are the red vertical lines.
+```{r extract_posterior}
+la_cmr_1 <- extract(cmr_fit_1)
+```
 
-la_fit_1 <- rstan::extract( cmr_fit_1 ) 
+```{r posterior_vs_true_betas, echo=TRUE, fig.align='center', fig.asp = 0.5, fig.width=6}
+p <- la_cmr_1$b0_Linf %>% data.frame() %>%
+  rename(b_Linf = ".") %>%
+  mutate(b_k = la_cmr_1$b0_k) %>%
+  pivot_longer(cols = c(b_Linf, b_k),
+               names_to = "parameter",
+               values_to = "value") %>%
+  ggplot(aes(x = value)) +
+  geom_histogram(aes(y = after_stat(count / sum(count))), binwidth = 0.01) +
+  facet_wrap(~ parameter, scales = "free_x") +
+  ylab("Percent of total posterior draws")
 
-bayesplot::ppc_stat( y = df_cmr$length_r ,
-                     yrep = la_fit_1$y_rep_cmr , 
-                     stat = mean )
+tv <- data.frame(parameter = c("b_Linf", "b_k"), tv = c(b0_Linf,  b0_k))
+p + geom_vline(aes(xintercept = tv), tv, color = "red", linewidth = 2)
+```
 
-bayesplot::ppc_stat( y = df_cmr$length_r , 
-                     yrep = la_fit_1$y_rep_cmr , 
-                     stat = sd )
+```{r posterior_vs_true_sigma, echo=TRUE, fig.align='center', fig.asp = 0.5, fig.width=6}
+p <- la_cmr_1$sigma_VB %>% data.frame() %>%
+  rename(sigma_Linf = X1, 
+         sigma_k = X2) %>%
+  mutate(sigma_y = la_cmr_1$sigma) %>%
+  pivot_longer(cols = c(sigma_Linf, sigma_k, sigma_y),
+               names_to = "parameter",
+               values_to = "value") %>%
+  ggplot(aes(x = value)) +
+  geom_histogram(aes(y = after_stat(count / sum(count))), binwidth = 0.0025) +
+  facet_wrap(~ parameter, scales = "free_x", ncol = 4) +
+  ylab("Percent of total posterior draws")
 
-bayesplot::ppc_stat( y = df_cmr$length_r , 
-                     yrep = la_fit_1$y_rep_cmr , 
-                     stat = max )
+tv <- data.frame(parameter = c("sigma_Linf", "sigma_k", "sigma_y"), tv = c(sigma_VB, sigma))
+p + geom_vline(aes(xintercept = tv), tv, color = "red", linewidth = 2)
+```
 
-bayesplot::ppc_stat( y = df_cmr$length_r , 
-                     yrep = la_fit_1$y_rep_cmr , 
-                     stat = min )
+```{r posterior_vs_true_omega, echo=TRUE, fig.align='center', fig.asp = 0.5, fig.width=6}
+p <- la_cmr_1$Omega[, 1, 2] %>% data.frame() %>%
+  rename(Omega_Linf_k = ".") %>%
+  ggplot(aes(x = Omega_Linf_k)) +
+  geom_histogram(aes(y = after_stat(count / sum(count))), binwidth = 0.05) +
+  ylab("Percent of total posterior draws") +
+  xlab("value") +
+  ggtitle(expression(Omega[Linf]))
 
-s <- as.vector(sample(1:nrow(df_cmr), 100, replace = F ))#draw random 100 rows
+p + geom_vline(xintercept = Omega[1,2], color = "red", linewidth = 2)
+```
+
+### Compare predictions to characteristics of simulated data
+Compare posterior predictive distribution (black) to observed (simulated in this case) data distribution (red): 
+```{r ppd_summary_1, echo=TRUE, fig.align='center', fig.asp = 0.6, fig.width=5}
+bayesplot::ppc_stat(y = y, 
+                    yrep = la_cmr_1$y_rep, 
+                    stat = mean,
+                    binwidth = 1)
+
+bayesplot::ppc_stat(y = y, 
+                    yrep = la_cmr_1$y_rep, 
+                    stat = sd,
+                    binwidth = 1)
+
+bayesplot::ppc_stat(y = y, 
+                    yrep = la_cmr_1$y_rep, 
+                    stat = max,
+                    binwidth = 1)
+
+bayesplot::ppc_stat(y = y, 
+                    yrep = la_cmr_1$y_rep, 
+                    stat = min,
+                    binwidth = 1)
+
+s <- as.vector(sample(1:length(y), 100, replace = F))#draw random 100 rows
 
 #bayesplot::ppc_dens_overlay( y = df_mixture$length , yrep = la_prior$y_rep_mix[ s , ] )
 
-bayesplot::ppc_intervals( y = df_cmr$length_r[ s ], yrep = la_fit_1$y_rep_cmr[  , s ] )
+bayesplot::ppc_intervals(y = y[s], yrep = la_cmr_1$y_rep[, s])
 
 rm(s)
 
-plot( density( la_fit_1$y_rep_cmr[ 1 , ] ) , lwd=2 , main= "" , ylim=c( 0, 0.02 ), xlim=c( 0 , 500 ) , col='gray' )
-for ( i in 1:200 ){
-  lines( density( la_fit_1$y_rep_cmr[ sample( 1:dim(la_fit_1$y_rep_cmr)[1], 1 ) , ] ) , lwd=2 , col='gray' )
+plot(density(la_cmr_1$y_rep[1, ]), lwd = 2, main = "", ylim=c(0, 0.015), xlim=c(0, 500), col = 'gray')
+for (i in 1:200){
+  lines(density(la_cmr_1$y_rep[sample(1:dim(la_cmr_1$y_rep)[1], 1), ]), lwd=2, col = 'gray')
   }
-lines( density ( df_cmr$length_r ) , col='red' , lwd=2 )
+lines(density(y), col = 'red', lwd = 2)
 ```
 
-###Leave-one-out cross validation with PSIS-LOO
-```{r loo_cmr, fig.align='center', fig.height=4, fig.width=6 }
+### Leave-one-out cross validation with PSIS-LOO
+```{r loo_mix, fig.align='center', fig.height=4, fig.width=6 }
 
-log_lik_cmr_1 <- loo::extract_log_lik( cmr_fit_1 , 
+log_lik_cmr_1 <- loo::extract_log_lik(cmr_fit_1 , 
                                   parameter_name="log_lik", 
-                                  merge_chains = FALSE )
+                                  merge_chains = FALSE)
 
-r_eff_cmr_1 <- loo::relative_eff( log_lik_cmr_1 , cores = 1 )
+r_eff_cmr_1 <- loo::relative_eff(log_lik_cmr_1 , cores = 1)
 
-loo_cmr_1 <- loo::loo( log_lik_cmr_1, 
-                  r_eff= r_eff_cmr_1 , 
-                  cores = 1 )
-print( loo_cmr_1 )
+loo_cmr_1 <- loo::loo(log_lik_cmr_1, 
+                  r_eff= r_eff_cmr_1,
+                  save_psis = TRUE,
+                  cores = 1)
+print(loo_cmr_1)
 
-plot( loo_cmr_1 , label_points = T )
-
+plot(loo_cmr_1 , label_points = T)
 ```
 
-This diagnostic plot helps us identify potentially problematic observations, given the model. Lets print out a few of the potentially problematic observations.
+#### LOO-PIT calibration
+Now lets use the loo calculations to graphically assess calibration. 
 
-```{r potential_bad}
+First, we'll need to extract the weights from the LOO PSIS object.
+```{r extract_mix_1}
+wts_cmr_1 <- weights(loo_cmr_1$psis_object)
+```
 
-print( df_cmr[ c( 64 , 355 , 589 ) , ] %>%
-  mutate( grow_mm_d = round( ( length_r - length_c ) / days , 3 ) ) )
-
+Now we can plot the LOO-PIT overlay. If well-calibrated, the PIT line should fall within the simulated draws of the uniform distribution (blue lines).
+```{r loo_pit_model_2, warning=FALSE, fig.align='center', fig.width=6, fig.asp=0.7}
+bayesplot::ppc_loo_pit_overlay(y = stan_dataList_cmr_fit$y, 
+                    yrep = la_cmr_1$y_rep,
+                    lw = wts_cmr_1,
+                    samples = 50)
 ```
 
 # Stan model for integrated (mixture and cmr) VBGF
